fix merge conflict that got checked in

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,13 +15,9 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      NEList DiskSet GroupLog Log LogRecArray \
 	      Balloc BlockPtr GenSepAuto Inode BFile MemMatch FileRecArray \
 	      Dir DirName StringUtils TreeUtils DirTree TreeCrash \
-<<<<<<< HEAD
-	      SuperBlock AsyncFS AsyncFSRecover VBConv ADestructPair DestructVarname ExtrHaskellPrelude \
-				DirSep TreeSeq ProgMetatheory
-=======
-	      SuperBlock AsyncFS AsyncFSRecover VBConv AByteFile ADestructPair DestructVarname ExtrHaskellPrelude \
-	      DirSep TreeSeq
->>>>>>> origin/disklog2
+	      SuperBlock AsyncFS AsyncFSRecover \
+	      VBConv ADestructPair DestructVarname ExtrHaskellPrelude \
+	      DirSep TreeSeq ProgMetatheory
 VS         := $(MODULES:%=%.v)
 VS_BUILD   := $(patsubst %.v,coqbuild/%.v,$(VS))
 VS_VIO	   := $(patsubst %.v,coqbuild/%.vio,$(VS))
