avoid building unnecessary VBConv

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,7 +16,7 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      Balloc BlockPtr GenSepAuto Inode BFile MemMatch FileRecArray \
 	      Dir DirName StringUtils TreeUtils DirTree TreeCrash \
 	      SuperBlock AsyncFS AsyncFSRecover \
-	      VBConv ADestructPair DestructVarname ExtrHaskellPrelude \
+	      ADestructPair DestructVarname ExtrHaskellPrelude \
 	      DirSep TreeSeq ProgMetatheory
 VS         := $(MODULES:%=%.v)
 VS_BUILD   := $(patsubst %.v,coqbuild/%.v,$(VS))
