Generalize ConcurrentFS over any protocol

--- a/src/Makefile
+++ b/src/Makefile
@@ -17,7 +17,8 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      Locking Automation ForwardChaining \
 	      CoopConcur CoValid CoopConcurMonad CoopConcurAuto Protocols \
 	      DiskReaders MemCache WriteBuffer WriteBufferSet ConcurrentCache \
-				ConcurrentCopy Specifications ConcurrentBridge ConcurrentFS
+				ConcurrentCopy Specifications ConcurrentBridge ConcurrentFS \
+				ReadOnlyFS
 VS         := $(MODULES:%=%.v)
 VS_BUILD   := $(patsubst %.v,coqbuild/%.v,$(VS))
 VS_VIO	   := $(patsubst %.v,coqbuild/%.vio,$(VS))
