Define a directory isolation protocol
Wrap all the syscalls in AsyncFS, without proofs under directory
isolation (or for retry loops).

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,7 +20,7 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      CoopConcur CoValid CoopConcurMonad CoopConcurAuto Protocols \
 	      DiskReaders MemCache WriteBuffer WriteBufferSet ConcurrentCache \
 				ConcurrentCopy Specifications ConcurrentBridge ConcurrentFS \
-				ReadOnlyFS \
+				ReadOnlyFS DirectoryIsolatedFS \
 				SuperBlock AsyncFS AsyncFSRecover \
 	      ADestructPair DestructVarname ExtrHaskellPrelude \
 	      DirSep TreeSeq ProgMetatheory
