--- a/src/Makefile
+++ b/src/Makefile
@@ -56,7 +56,7 @@ OCAMLFUSE	:= ocamlfuse/Fuse.a ocamlfuse/Fuse.cmxa
 
 .PHONY: coq proof clean
 
-all: fuse mkfs
+all: fscq mkfs
 
 -include $(OCAMLFUSE_DEP)
 
