Split up Facade.v into a bunch of files

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,8 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      Dir DirName StringUtils TreeUtils DirTree TreeCrash \
 	      SuperBlock AsyncFS AsyncFSRecover VBConv ADestructPair DestructVarname ExtrHaskellPrelude \
 	      DirSep TreeSeq \
-				MoreMapFacts StringMap VerdiTactics Gensym Go GoSep Facade GoExamples GoFunctions
+				MoreMapFacts StringMap VerdiTactics Gensym GoSemantics GoFacts \
+				GoTactics1 GoHoare GoTactics2 GoCompilationLemmas GoExtraction GoExamples GoExtracted
 VS         := $(MODULES:%=%.v)
 VS_BUILD   := $(patsubst %.v,coqbuild/%.v,$(VS))
 VS_VIO	   := $(patsubst %.v,coqbuild/%.vio,$(VS))
