add BFileCrash.v for specifying a file-level [crash_xform] equivalent

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,8 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      FSLayout AsyncRecArray DiskLogHash \
 	      LogReplay MemLog ListPred GenSepN \
 	      NEList DiskSet GroupLog Log LogRecArray \
-	      Balloc BlockPtr GenSepAuto Inode BFile MemMatch FileRecArray \
+	      Balloc BlockPtr GenSepAuto Inode BFile BFileCrash \
+	      MemMatch FileRecArray \
 	      Dir DirName StringUtils TreeUtils DirTree TreeCrash \
 	      SuperBlock AsyncFS AsyncFSRecover VBConv AByteFile \
 	      ADestructPair DestructVarname ExtrHaskellPrelude \
