fix running 'make' after 'make clean'

--- a/src/Makefile
+++ b/src/Makefile
@@ -60,9 +60,11 @@ $(GOCAML_ML): $(VS_VIO) $(EXTRACT_VIO)
 	( cd coqbuild && coqc -q -R . Fscq Extract/ExtractGOcaml )
 
 codegen/src/gofscq/%.go : golib/%.go
+	@mkdir -p $(dir $@)
 	ln -s $(abspath $<) $@
 
 codegen/src/fscq/%.go: golib/%.go
+	@mkdir -p $(dir $@)
 	ln -s $(abspath $<) $@
 
 codegen/src/gofscq/fscq.go: codegen/fscq2go.native
