Use GoSemantics functions in fscq2go
Extract type_eq_dec and can_alias for use in fscq2go

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,7 @@ VS_VIO	   := $(patsubst %.v,coqbuild/%.vio,$(VS))
 
 EXTRACT_MODULES := Wrappers \
 					ExtractCache ExtractDiskLogHash \
-					GoExtracted
+					GoExtracted ExtractGOcaml
 EXTRACT_VS 		:= $(EXTRACT_MODULES:%=Extract/%.v)
 EXTRACT_BUILD   := $(patsubst %.v,coqbuild/%.v,$(EXTRACT_VS))
 EXTRACT_VIO     := $(patsubst %.v,coqbuild/%.vio,$(EXTRACT_VS))
