--- a/src/Makefile
+++ b/src/Makefile
@@ -26,7 +26,21 @@ EXTRACT_VS 		:= $(EXTRACT_MODULES:%=Extract/%.v)
 EXTRACT_BUILD   := $(patsubst %.v,coqbuild/%.v,$(EXTRACT_VS))
 EXTRACT_VIO     := $(patsubst %.v,coqbuild/%.vio,$(EXTRACT_VS))
 
+VS_HS      := codegen/AsyncFS.hs
+GHC 	   := ghc
+HSC2HS	   := hsc2hs
+ifeq (,$(shell $(GHC) --version | grep 'version 8.0' 2>/dev/null))
+	GHC := /opt/ghc/8.0.1/bin/ghc
+	HSC2HS := /opt/ghc/8.0.1/bin/hsc2hs
+endif
+
 J	   ?= 1
+GHCARGS    := -O2 -threaded
+		# -prof -fprof-auto -rtsopts
+		# -eventlog
+HSLIB_FUSE := hscgen/Fuse.hs
+HSLIB_PRE  := hslib/Word.hs hslib/Evict.hs hslib/Profile.hs
+HSLIB_POST := hslib/Disk.hs hslib/Interpreter.hs
 
 GOCAML_MOD := Ascii BinInt BinNat BinNums BinPos Datatypes \
 	            FMapAVL FMapList Int List0 Nat0 OrderedTypeEx OrderedType \
@@ -88,6 +102,21 @@ codegen/fscq2go.byte: $(GOCAML_ML) codegen/big.ml codegen/fscq2go.ml
 
 $(VS_JSON): $(VS_VIO) coqbuild/ExtractJSON.v
 	( cd coqbuild && coqc -q -R . Fscq ExtractJSON )
+
+hscgen/%.hs: hslib/%.hsc
+	@mkdir -p $(@D)
+	$(HSC2HS) $< -o $@ --cflag=-D_FILE_OFFSET_BITS=64
+
+%: %.hs $(VS_HS) $(HSLIB_FUSE)
+	test ! -f codegen/Word.hs || mv codegen/Word.hs codegen/.Word.hs
+	$(GHC) $(GHCARGS) $(HSLIB_FUSE)
+	$(GHC) $(GHCARGS) -Wall $(HSLIB_PRE)
+	$(GHC) $(GHCARGS) -F -pgmF ./fiximports.py codegen/*.hs -ihslib
+	$(GHC) $(GHCARGS) -F -pgmF ./fiximports.py -Wall $(HSLIB_POST) -ihslib -icodegen
+	$(GHC) $(GHCARGS) -F -pgmF ./fiximports.py -Wall $< -ihslib -icodegen -ihscgen -optl -lfuse -o $@
+
+$(VS_HS): $(VS_VIO) coqbuild/ExtractHaskell.v
+	( cd coqbuild && coqc -q -R . Fscq ExtractHaskell )
 
 $(VS_VIO) $(EXTRACT_VIO): coqbuild/Makefile.coq
 	( cd coqbuild && $(MAKE) -j $(J) -f Makefile.coq quick )
