Split DirTree in several files, following the key abstractions/invariants:   DirTreeDef: definition of trees for use in specs   DirTreePath: pathnames   DirTreePred: seperation-style predicates over a dir tree   DirTreeRep: the dirtree rep invariant   DirTreeNames: names in a directory are unique   DirTreeInodes: inodes in a dir tree are unique   DirTreeSafe: the dirtree safety property   DirTree: the programs and their top-level specs
Adjust TreeSeq, TreeCrash, AsyncFS, and AtomicCP to handle this split.

All proofs appear to checkout, except for AtomicCp. I am confused about
AtomicCp, because i don't understand what proved before this split. An earlier
checkin says copy2temp_ok is proven but it is not.

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,7 +15,10 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      NEList DiskSet GroupLog Log LogRecArray \
 	      Balloc BlockPtr GenSepAuto Inode BFile BFileCrash \
 	      MemMatch FileRecArray \
-	      Dir DirName StringUtils TreeUtils DirTree TreeCrash \
+	      Dir DirName StringUtils TreeUtils \
+	      DirTreePath DirTreeDef DirTreePred DirTreeRep DirTreeSafe \
+	      DirTreeNames DirTreeInodes DirTree \
+	      TreeCrash \
 	      SuperBlock AsyncFS AsyncFSRecover VBConv AByteFile \
 	      ADestructPair DestructVarname ExtrHaskellPrelude \
 		  DirSep TreeSeq ProgMetatheory BACHelper
