another skeleton for extracting [AsyncFS.AFS.file_get_sz]
also gets stuck in an infinite loop extracting [FSLayout.FSXPLog fsxp]

this seems to be because the automation decides to decompose [FSLayout.FSXPLog fsxp]
into its constituent components, even though the program in question doesn't need to
access any of the components; it needs the entire [FSLayout.FSXPLog fsxp].

--- a/src/Makefile
+++ b/src/Makefile
@@ -23,6 +23,7 @@ EXTRACT_MODULES := Wrappers \
 					ExtractCache ExtractDiskLogHash \
 					ExtractBFile \
 					ExtractDirTree \
+					ExtractAsyncFS \
 					GoExtracted
 EXTRACT_VS 		:= $(EXTRACT_MODULES:%=Extract/%.v)
 EXTRACT_BUILD   := $(patsubst %.v,coqbuild/%.v,$(EXTRACT_VS))
