--- a/src/Makefile
+++ b/src/Makefile
@@ -21,6 +21,7 @@ VS_VIO	   := $(patsubst %.v,coqbuild/%.vio,$(VS))
 
 EXTRACT_MODULES := Wrappers \
 					ExtractCache ExtractDiskLogHash \
+					ExtractBalloc \
 					ExtractBFile \
 					ExtractDirTree \
 					ExtractAsyncFS \
