Separate proofs about sequential spec styles

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ MODULES    := CCLProg CCLMonadLaws CCLHoareTriples CCLPrimitives \
               Automation CCLAutomation CCL \
 							SyncRead \
               MemCache WriteBuffer UpdList OptimisticCache \
-              OptimisticTranslator OptimisticFS \
+              SeqSpecs OptimisticTranslator OptimisticFS \
 							Lock Nomega Word WordAuto WordZ Bytes Rounding \
 				Mem AsyncDisk Pred Prog ProgMonad PredCrash Hoare \
 				OperationalSemantics \
