--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ OCAMLBUILD := env OCAMLPATH=$(shell pwd) ocamlbuild \
 	      -I codegen -I mllib -X ocamlfuse \
 	      -package extunix -package zarith -package ocamlfuse
 MODULES    := CCLProg CCLMonadLaws CCLHoareTriples CCLPrimitives \
-              Automation CCLAutomation CCL \
+              Automation CCLAutomation RetryLoop CCL \
 							SyncRead \
               MemCache WriteBuffer UpdList OptimisticCache \
               SeqSpecs OptimisticTranslator OptimisticFS \
