Write (unproven) syscall retry loop
Some minimal framework for the file system to go in, with memstate in
shared memory.

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ MODULES    := CCLProg CCLMonadLaws CCLHoareTriples CCLPrimitives \
               Automation CCLAutomation RetryLoop CCL \
 							SyncRead \
               MemCache WriteBuffer UpdList OptimisticCache \
-              SeqSpecs OptimisticTranslator OptimisticFS \
+              SeqSpecs OptimisticTranslator OptimisticFS ConcurrentFS \
 							Lock Nomega Word WordAuto WordZ Bytes Rounding \
 				Mem AsyncDisk Pred Prog ProgMonad PredCrash Hoare \
 				OperationalSemantics \
