add skeleton extraction theorems all the way down from AsyncFS.file_get_sz
missing extraction of 8 functions:

  DIRTREE.getattr
  BFILE.getattrs
  INODE.getattrs
  INODE.IRec.get
  LOG.begin
  LOG.read
  GLog.read
  MLog.read

--- a/src/Makefile
+++ b/src/Makefile
@@ -26,6 +26,10 @@ EXTRACT_MODULES := Wrappers \
 		ExtractBFile \
 		ExtractDirTree \
 		ExtractAsyncFS \
+		ExtractInode \
+		ExtractLog \
+		ExtractGroupLog \
+		ExtractMemLog \
 		GoExtracted
 EXTRACT_VS 		:= $(EXTRACT_MODULES:%=Extract/%.v)
 EXTRACT_BUILD   := $(patsubst %.v,coqbuild/%.v,$(EXTRACT_VS))
