Export concurrent syscalls with fuse
Copy of fscq.hs, using the concurrent implementations rather than the
sequential ones.

--- a/src/Makefile
+++ b/src/Makefile
@@ -65,7 +65,7 @@ OCAMLFUSE	:= ocamlfuse/Fuse.a ocamlfuse/Fuse.cmxa
 
 .PHONY: coq proof clean
 
-all: fscq mkfs
+all: cfscq fscq mkfs
 
 -include $(OCAMLFUSE_DEP)
 
