Document ticky-ticky profiling options
See https://ghc.haskell.org/trac/ghc/wiki/Debugging/TickyTicky for some
basic documentation.

--- a/src/Makefile
+++ b/src/Makefile
@@ -44,6 +44,7 @@ endif
 
 J	   ?= 1
 GHCARGS    := -O2 -threaded -rtsopts
+		# -ticky -ticky-dyn-thunk -ticky-allocd
 		# -prof -fprof-auto
 		# -eventlog
 HSLIB_FUSE := hscgen/Fuse.hs
