Parallelize Haskell build

--- a/src/Makefile
+++ b/src/Makefile
@@ -37,8 +37,9 @@ ifeq (,$(shell $(GHC) --version | grep 'version 8.0' 2>/dev/null))
 endif
 
 J	   ?= 1
-GHCARGS    := -O2 -threaded
-		# -prof -fprof-auto -rtsopts
+GHCARGS    := -j$(J) -O2 -threaded -rtsopts
+		# -ticky -ticky-dyn-thunk -ticky-allocd
+		# -prof -fprof-auto
 		# -eventlog
 HSLIB_FUSE := hscgen/Fuse.hs
 HSLIB_PRE  := hslib/Word.hs hslib/Evict.hs hslib/Profile.hs
