Add copy of ReadWriteLock from concurrent-extra
To allow making some local modifications

--- a/src/Makefile
+++ b/src/Makefile
@@ -49,7 +49,7 @@ GHCARGS    := -j$(J) -O2 -threaded -rtsopts
 		# -eventlog
 HSLIB_FUSE := hscgen/Fuse.hs
 HSLIB_PRE  := hslib/Word.hs hslib/Evict.hs hslib/Profile.hs
-HSLIB_POST := hslib/ShowErrno.hs hslib/Disk.hs hslib/Interpreter.hs hslib/ConcurInterp.hs
+HSLIB_POST := hslib/ShowErrno.hs hslib/ReadWriteLock.hs hslib/Disk.hs hslib/Interpreter.hs hslib/ConcurInterp.hs
 
 OCAMLFUSE_ML	:= ocamlfuse/Result.ml \
 		   ocamlfuse/Unix_util.ml \
